Add faq, footer section

--- a/index-2.html
+++ b/index-2.html
@@ -1383,14 +1383,17 @@
                 
 
                 <!-- start faq-section -->
-                <section class="faq-section section-padding--3">
+                <section class="faq-section faq-section--style-2 section-padding">
                     <div class="container">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-sm-12 col-md-12 col-xl-6">
                                 <div class="section-text-content text-center">
                                     <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
-                                        Frequently Asked Question
+                                        New to Communities?
                                     </h2>
+                                    <p class="para-text">
+                                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam faucibus pulvinar vulputate neque. 
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1661,28 +1664,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="shapes">
-                        <div class="tob">
-                            <img src="images/faq/tree-tob.png" alt="">
-                            <ul>
-                                <li>
-                                    <img src="images/faq/leaf-2.png" alt="">
-                                </li>
-                                <li>
-                                    <img src="images/faq/leaf-1.png" alt="">
-                                </li>
-                                <li>
-                                    <img src="images/faq/leaf-3.png" alt="">
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </section>
                 <!-- end faq-section -->
 
 
                 <!-- start footer section -->
-                <footer class="footer-section footer-section--style-1">
+                <footer class="footer-section footer-section--style-2">
                     <div class="container">
                         <div class="rt-footer-content-wrapper">
                             <div class="row gutters-30 justify-content-between">
@@ -1691,12 +1678,13 @@
                                         <div class="rt-footer-link-list-wrapper">
                                             <div class="rt-footer-logo">
                                                 <a href="">
-                                                    <img src="images/logo/logo-5.svg" alt="logo-footer">
+                                                    <img src="images/logo/logo-6.svg" alt="logo-footer">
                                                 </a>
                                             </div>
                                             <p class="para-text">
-                                                Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris integer quam dolor nunc semper.
+                                                Germany — 785 15h Street, Office 478 Berlin, De 81566
                                             </p>
+                                            <a href="" class="email">infoyour@emil.com</a>
                                         </div>
                                     </div>
                                 </div>
