Add join-community section

--- a/index-2.html
+++ b/index-2.html
@@ -1667,6 +1667,32 @@
                 </section>
                 <!-- end faq-section -->
 
+                <!-- start join-community-section -->
+                <section class="join-community-section">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-10">
+                                <div class="join-community-wrapper d-flex justify-content-around align-items-center">
+                                    <div class="join-community-text-content d-flex justify-content-center align-items-center">
+                                        <div class="icon">
+                                            <img src="images/icons/problem-solve1.svg" alt="">
+                                        </div>
+                                        <div class="title-area">
+                                            <h3 class="title">
+                                                You will love our solutions
+                                            </h3>
+                                            <p class="para-text">
+                                                Take a look at our highly rated 20+ premium and free plugins.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <a href="" class="join-community-btn">Join the community</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- end join-community-section -->
 
                 <!-- start footer section -->
                 <footer class="footer-section footer-section--style-2">
@@ -1808,19 +1834,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="shapes">
-                        <ul>
-                            <li class="">
-                                <img src="images/footer/OBJECTS.png" alt="" class="wow animate__fadeInLeft animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
-                            </li>
-                            <li class="rt-mouse-parallax">
-                                <div data-depth="5.00">
-                                    <img src="images/footer/shape1.svg" alt="" class="wow animate__fadeInRight animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                 </footer>
                 <!-- end footer section -->
