Add Home3: header, hero, service, support section

--- a/index-2.html
+++ b/index-2.html
@@ -416,6 +416,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="shapes">
+                        <ul>
+                            <li>
+                                <img src="images/hero-section/shapes/shape-bg3.svg" alt="">
+                            </li>
+                            <li>
+                                <img src="images/hero-section/shapes/shape-bg4.svg" alt="">
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <!-- end Hero section -->
 
@@ -1199,8 +1209,12 @@
                                 <div class="rt-slider swiper">
                                     <div class="element-carousel anime-element" 
                                         data-visible-slide="1"
-                                        data-visible-lg-slide="1"
                                         data-visible-md-slide="1"
+                                        data-visible-lg-slide="1"
+                                        data-visible-xl-slide="1"
+                                        data-visible-xxl-slide="1"
+                                        data-visible-xxxl-slide="1"
+                                        data-visible-xs-slide="1"
                                         data-loop="false" 
                                         data-space-between="30" 
                                         data-speed="1000"
@@ -1672,8 +1686,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-xl-10">
-                                <div class="join-community-wrapper d-flex justify-content-around align-items-center">
-                                    <div class="join-community-text-content d-flex justify-content-center align-items-center">
+                                <div class="join-community-wrapper d-flex justify-content-around align-items-center flex-wrap">
+                                    <div class="join-community-text-content d-flex justify-content-center align-items-center flex-wrap text-center text-md-start">
                                         <div class="icon">
                                             <img src="images/icons/problem-solve1.svg" alt="">
                                         </div>
