--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row gutters-30 isotope-items">
+                        <div class="row isotope-items">
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
                                 <div class="explore-topics-card rt-color-shade7-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -1520,7 +1520,7 @@
                 <footer class="footer-section footer-section--style-1">
                     <div class="container">
                         <div class="rt-footer-content-wrapper">
-                            <div class="row gutters-30 justify-content-between">
+                            <div class="row justify-content-between">
                                 <div class="col-xl-3 col-lg-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="200ms">
                                     <div class="rt-footer-content rt-mb-30">
                                         <div class="rt-footer-link-list-wrapper">
