Add Singe-element-page content and 404 page

--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                                             <div class="faq-pane-wrapper">
                                                 <div class="tab-content" id="v-pills-tabContent">
                                                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                                                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                        <div class="accordion accordion-flush accordion--style-1" id="accordionFlushExample">
                                                             <div class="accordion-item">
                                                                 <h2 class="accordion-header" id="flush-headingOne">
                                                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
