Add blog-grid, blog-list page

--- a/404.html
+++ b/404.html
@@ -412,6 +412,7 @@
                 </div>
                 <!-- end page-menu section -->
 
+                <!-- start error-section --> 
                 <section class="error-section section-padding">
                     <div class="container">
                         <div class="rt-error-area">
@@ -440,6 +441,7 @@
                         </div>
                     </div>
                 </section>
+                <!-- end error-section --> 
 
                 <!-- start call-to-action-section -->
                 <section class="call-to-action-section">
