--- a/blog-list.html
+++ b/blog-list.html
@@ -676,32 +676,32 @@
                                             <ul>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Art & Design <span class="number"></span>
+                                                        Documentation 
                                                     </a>
                                                 </li>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Business <span class="number"></span>
+                                                        Ideas 
                                                     </a>
                                                 </li>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Data Science <span class="number"></span>
+                                                        Workspace 
                                                     </a>
                                                 </li>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Development <span class="number"></span>
+                                                        WooCommerce 
                                                     </a>
                                                 </li>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Finance <span class="number"></span>
+                                                        FAQs 
                                                     </a>
                                                 </li>
                                                 <li>
                                                     <a href="single-blog.html">
-                                                        Health & Fitness <span class="number"></span>
+                                                        Business Tips 
                                                     </a>
                                                 </li>
                                             </ul>
@@ -711,15 +711,19 @@
                                     
 
                                     <div class="side-widget widget-tag wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                        <h3 class="sub-title">Tags</h3>
+                                        <h3 class="sub-title">Popular Tags</h3>
                                         <div class="tag-list-wrapper">
                                             <ul class="tag-list d-flex">
-                                                <li><a href="" class="tag-link">Course</a></li>
-                                                <li><a href="" class="tag-link">Education</a></li>
-                                                <li><a href="" class="tag-link">LMS</a></li>
-                                                <li><a href="" class="tag-link">Online</a></li>
-                                                <li><a href="" class="tag-link">Learn</a></li>
-                                                <li><a href="" class="tag-link">Training</a></li>
+                                                <li><a href="" class="tag-link">Agency</a></li>
+                                                <li><a href="" class="tag-link">Creative</a></li>
+                                                <li><a href="" class="tag-link">Solutions</a></li>
+                                                <li><a href="" class="tag-link">Idea</a></li>
+                                                <li><a href="" class="tag-link">FAQs</a></li>
+                                                <li><a href="" class="tag-link">docs</a></li>
+                                                <li><a href="" class="tag-link">Application</a></li>
+                                                <li><a href="" class="tag-link">News</a></li>
+                                                <li><a href="" class="tag-link">Technology</a></li>
+                                                <li><a href="" class="tag-link">Landing</a></li>
                                             </ul>
                                         </div>
                                     </div>
