--- a/contact.html
+++ b/contact.html
@@ -424,7 +424,7 @@
                                         </p>
                                     </div>
                                     <div class="contact-info-wrapper">
-                                        <div class="contact-info-box d-flex">
+                                        <div class="contact-info-box d-flex wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <div class="icon d-flex justify-content-center align-items-center circle-radius">
                                                 <svg width="12" height="17" viewBox="0 0 12 17" fill="#15C590" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M5.25 15.625C3.625 13.5938 0 8.75 0 6C0 2.6875 2.65625 0 6 0C9.3125 0 12 2.6875 12 6C12 8.75 8.34375 13.5938 6.71875 15.625C6.34375 16.0938 5.625 16.0938 5.25 15.625ZM6 8C7.09375 8 8 7.125 8 6C8 4.90625 7.09375 4 6 4C4.875 4 4 4.90625 4 6C4 7.125 4.875 8 6 8Z" fill=""/>
@@ -435,7 +435,7 @@
                                                 <p class="para-text">27 Division St, New York, NY 10002, USA</p>
                                             </div>
                                         </div>
-                                        <div class="contact-info-box d-flex">
+                                        <div class="contact-info-box d-flex wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                             <div class="icon d-flex justify-content-center align-items-center circle-radius">
                                                 <svg width="16" height="12" viewBox="0 0 16 12" fill="#15C590" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14.5 0C15.3125 0 16 0.6875 16 1.5C16 2 15.75 2.4375 15.375 2.71875L8.59375 7.8125C8.21875 8.09375 7.75 8.09375 7.375 7.8125L0.59375 2.71875C0.21875 2.4375 0 2 0 1.5C0 0.6875 0.65625 0 1.5 0H14.5ZM6.78125 8.625C7.5 9.15625 8.46875 9.15625 9.1875 8.625L16 3.5V10C16 11.125 15.0938 12 14 12H2C0.875 12 0 11.125 0 10V3.5L6.78125 8.625Z" fill=""/>
@@ -447,7 +447,7 @@
                                                 <p class="para-text">ourwebsite@mail.com</p>
                                             </div>
                                         </div>
-                                        <div class="contact-info-box d-flex">
+                                        <div class="contact-info-box d-flex wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                             <div class="icon d-flex justify-content-center align-items-center circle-radius">
                                                 <svg width="17" height="18" viewBox="0 0 17 18" fill="#15C590" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M15.9688 13.0938L15.2188 16.25C15.125 16.7188 14.75 17.0312 14.2812 17.0312C6.40625 17 0 10.5938 0 2.71875C0 2.25 0.28125 1.875 0.75 1.78125L3.90625 1.03125C4.34375 0.9375 4.8125 1.1875 5 1.59375L6.46875 5C6.625 5.40625 6.53125 5.875 6.1875 6.125L4.5 7.5C5.5625 9.65625 7.3125 11.4062 9.5 12.4688L10.875 10.7812C11.125 10.4688 11.5938 10.3438 12 10.5L15.4062 11.9688C15.8125 12.1875 16.0625 12.6562 15.9688 13.0938Z" fill=""/>
@@ -474,7 +474,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="contact-form-wrapper">
+                                    <div class="contact-form-wrapper wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <form action="" class="row contact-form">
                                             <div class="col-xl-6">
                                                 <div class="input-area">
