--- a/index-4.html
+++ b/index-4.html
@@ -970,19 +970,20 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <div class="row justify-content-center">
-                                        <div class="col-lg-3 text-center">
-                                            <div class="pagination-wrapper wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
-                                                <nav aria-label="Page navigation example">
-                                                    <ul class="pagination">
-                                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                                        <li class="page-item"><a class="page-link active" href="#">2</a></li>
-                                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                                        <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                                        <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                                    </ul>
-                                                </nav>
-                                            </div>
+                                    
+                                </div>
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-3 text-center">
+                                        <div class="pagination-wrapper wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms" style="visibility: visible; animation-duration: 1200ms; animation-delay: 900ms; animation-name: fadeInUp;">
+                                            <nav aria-label="Page navigation example">
+                                                <ul class="pagination">
+                                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                                    <li class="page-item"><a class="page-link active" href="#">2</a></li>
+                                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                                </ul>
+                                            </nav>
                                         </div>
                                     </div>
                                 </div>
