--- a/single-element.html
+++ b/single-element.html
@@ -444,11 +444,11 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-3">
-                                <div class="sidebar-nav">
-                                    <div class="accordion accordion-flush accordion--style-3" id="accordionFlushExample">
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="flush-headingOne">
-                                                <button class="accordion-button elements-click" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                <div class="sidebar-nav stickyx">
+                                    <nav class="side-nav">
+                                        <ul class="parent-item-list"> 
+                                            <li class="nav-item">
+                                                <a href="#elements" class="nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M8.075 1.41289L12.1437 3.60664C12.6187 3.86289 12.6187 4.59414 12.1437 4.85039L8.075 7.04414C7.7125 7.23789 7.2875 7.23789 6.925 7.04414L2.85625 4.85039C2.38125 4.59414 2.38125 3.86289 2.85625 3.60664L6.925 1.41289C7.2875 1.21914 7.7125 1.21914 8.075 1.41289Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
@@ -457,23 +457,32 @@
                                                         </svg>
                                                     </div>
                                                     Elements
-                                                </button>
-                                            </h2>
-                                            <div id="flush-collapseOne" class="accordion-collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">
-                                                    <ul class="sidebar-nav-menu-list">
-                                                        <li><a id="" href="#one">Documentation Features</a></li>
-                                                        <li><a id="" href="#two">Tabs Widget</a></li>
-                                                        <li><a id="" href="#three">Notice / Message Widget</a></li>
-                                                        <li><a id="" href="#four">Accordions Widget</a></li>
-                                                        <li><a id="" href="#five">Cheatsheet Widget</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="flush-headingTwo">
-                                                <button class="accordion-button collapsed content-click" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                    <span class="arrow">
+                                                        <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
+                                                        </svg>
+                                                    </span>
+                                                </a>
+                                                <ul class="list-unstyled dropdown_nav ">
+                                                    <li class="nav-item no_icon page-item-2746">
+                                                        <a href="#documentation-features" class="nav-link">Documentation Features</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#tabs-widget" class="nav-link">Tabs Widget</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#message-widget" class="nav-link">Message Widget</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#accordions-widget" class="nav-link">Accordions Widget</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#cheatsheet-widget" class="nav-link">Cheatsheet Widget</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="#content" class="nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M5 7.62524H9.375" stroke="white" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -483,44 +492,38 @@
                                                         </svg>
                                                     </div>
                                                     Content
-                                                </button>
-                                            </h2>
-                                            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">
-                                                    <ul class="sidebar-nav-menu-list">
-                                                        <li><a id="" href="#one">Video Widget</a></li>
-                                                        <li><a id="" href="#two">Table Widget</a></li>
-                                                        <li><a id="" href="#three">Tooltip & Direction</a></li>
-                                                        <li><a id="" href="#four">Account Recovery Doc</a></li>
-                                                        <li><a id="" href="#four">Accordions Widget</a></li>
-                                                    </ul>    
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="flush-headingThree">
-                                                <button class="accordion-button collapsed layout-click" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                                    <div class="icon d-flex justify-content-center align-items-center">
-                                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                            <path d="M9.75715 2.18999L14.1821 4.15499C15.4571 4.71749 15.4571 5.64749 14.1821 6.20999L9.75715 8.17499C9.25465 8.39999 8.42965 8.39999 7.92715 8.17499L3.50215 6.20999C2.22715 5.64749 2.22715 4.71749 3.50215 4.15499L7.92715 2.18999C8.42965 1.96499 9.25465 1.96499 9.75715 2.18999Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                                            <path d="M2.25 8.25C2.25 8.88 2.7225 9.6075 3.3 9.8625L8.3925 12.1275C8.7825 12.3 9.225 12.3 9.6075 12.1275L14.7 9.8625C15.2775 9.6075 15.75 8.88 15.75 8.25" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                                            <path d="M2.25 12C2.25 12.6975 2.6625 13.3275 3.3 13.6125L8.3925 15.8775C8.7825 16.05 9.225 16.05 9.6075 15.8775L14.7 13.6125C15.3375 13.3275 15.75 12.6975 15.75 12" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                                    <span class="arrow">
+                                                        <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
                                                         </svg>
-                                                    </div>
-                                                    Layouts
-                                                </button>
-                                            </h2>
-                                            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                                    </span>
+                                                </a>
+                                                <ul class="list-unstyled dropdown_nav">
+                                                    <li class="nav-item no_icon page-item-2746">
+                                                        <a href="#video-widget" class="nav-link">Video Widget</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#table-widget" class="nav-link">Table Widget</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#tooltip" class="nav-link">tooltip</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#account-recovery-doc" class="nav-link">Account Recovery Doc</a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#accordions-widget" class="nav-link">Accordions Widget</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </nav>
                                 </div>
                             </div>
 
                             <div class="col-xl-6">
                                 <div class="content-wrapper">
-                                    <div class="elements-info-layout">
+                                    <section id="elements" class="elements-info-layout">
                                         <div id="one" class="documentation-features">
                                             <div class="head-title-area d-flex align-items-center">
                                                 <div class="icon">
@@ -1198,8 +1201,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="content-info-layout">
+                                    </section>
+                                    <section id="content" class="content-info-layout">
                                         <div class="main-heading-area">
                                             <h3 class="title">Content</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
@@ -1276,8 +1279,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                    </div>
-
+                                    </section>
                                     <div class="layout-info">
                                         <h1>3RD</h1>
                                     </div>
