Add responsive from index to multi-docs

--- a/index-2.html
+++ b/index-2.html
@@ -386,7 +386,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="searchbox-container searchbox-container--style-2 d-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-2 d-none d-sm-flex d-flex justify-content-between align-items-center">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <input type="text" value="" placeholder="Have a question?" class="searchbox-input">
@@ -408,7 +408,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="search-text">
+                                    <div class="search-text d-none d-sm-flex">
                                         <p><span>Popular:</span> Code, Basic, Price, <a href="">WordPress</a></p>
                                     </div>
                                 </div>
@@ -416,7 +416,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="shapes">
+                    <div class="shapes d-none d-md-block">
                         <ul>
                             <li>
                                 <img src="images/hero-section/shapes/shape-bg3.svg" alt="">
@@ -614,7 +614,7 @@
                         </div>
                         <div class="theme-logo-wrapper">
                             <div class="row justify-content-center">
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-1.svg" alt="">
@@ -627,7 +627,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-2.svg" alt="">
@@ -640,7 +640,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-3.svg" alt="">
@@ -653,7 +653,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-4.svg" alt="">
@@ -666,7 +666,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-5.svg" alt="">
@@ -679,7 +679,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-6.svg" alt="">
@@ -1199,13 +1199,13 @@
                 <!-- start testimonial-section -->
                 <section class="testimonial-section testimonial-section--style-2">
                     <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-xl-6">
-                                <div class="testimonial-img-area">
+                        <div class="row">
+                            <div class="col-md-12 col-lg-6 col-xl-6">
+                                <div class="testimonial-img-area d-none d-lg-block">
                                     <img src="images/testimonial/testimonial-img-1.png" alt="testimonial-img">
                                 </div>
                             </div>
-                            <div class="col-xl-6">
+                            <div class="col-md-12 col-lg-6 col-xl-6">
                                 <div class="rt-slider swiper">
                                     <div class="element-carousel anime-element" 
                                         data-visible-slide="1"
@@ -1440,7 +1440,7 @@
                                             <div class="faq-pane-wrapper">
                                                 <div class="tab-content" id="v-pills-tabContent">
                                                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                                                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                        <div class="accordion accordion--style-1 accordion-flush" id="accordionFlushExample">
                                                             <div class="accordion-item">
                                                                 <h2 class="accordion-header" id="flush-headingOne">
                                                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -1516,7 +1516,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="tab-pane fade" id="v-pills-theme_license" role="tabpanel" aria-labelledby="v-pills-theme_license-tab">
-                                                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                        <div class="accordion accordion--style-1 accordion-flush" id="accordionFlushExample">
                                                             <div class="accordion-item">
                                                                 <h2 class="accordion-header" id="flush-headingOne">
                                                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -1592,7 +1592,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="tab-pane fade" id="v-pills-pricing_support" role="tabpanel" aria-labelledby="v-pills-pricing_support-tab">
-                                                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                        <div class="accordion accordion--style-1 accordion-flush" id="accordionFlushExample">
                                                             <div class="accordion-item">
                                                                 <h2 class="accordion-header" id="flush-headingOne">
                                                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
