--- a/multi-docs.html
+++ b/multi-docs.html
@@ -646,7 +646,7 @@
                         </div>
                         <div class="theme-logo-wrapper">
                             <div class="row justify-content-center">
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-1.svg" alt="">
@@ -659,7 +659,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-2.svg" alt="">
@@ -672,7 +672,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-3.svg" alt="">
@@ -685,7 +685,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-4.svg" alt="">
@@ -698,7 +698,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-5.svg" alt="">
@@ -711,7 +711,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-6.svg" alt="">
