--- a/index-3.html
+++ b/index-3.html
@@ -386,7 +386,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="searchbox-container searchbox-container--style-3 d-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-3 d-none d-sm-flex d-flex justify-content-between align-items-center">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <input type="text" value="" placeholder="Have a question?" class="searchbox-input">
@@ -408,7 +408,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="search-text">
+                                    <div class="search-text d-none d-sm-flex">
                                         <p><span>Popular:</span> Code, Basic, Price, <a href="">WordPress</a></p>
                                     </div>
                                 </div>
